k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview-pr
  labels:
    app: preview-pr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preview-pr
  template:
    metadata:
      labels:
        app: preview-pr
    spec:
      containers:
        - name: preview-pr
          image: ghcr.io/sayjeyhi/pr.catshoulder.dev:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              memory: "128Mi"
