k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preview-pr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.middlewares: ""
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - '*.pr.catshoulder.dev'
      secretName: preview-pr-tls-v2
  rules:
    - host: '*.pr.catshoulder.dev'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: preview-pr-service
                port:
                  number: 8080
